@@ -13,9 +13,13 @@ import sgc.competencia.modelo.Competencia;
 import sgc.competencia.modelo.CompetenciaAtividade;
 import sgc.competencia.modelo.CompetenciaAtividadeRepo;
 import sgc.competencia.modelo.CompetenciaRepo;
+import sgc.mapa.dto.AtividadeImpactadaDto;
+import sgc.mapa.dto.CompetenciaImpactadaDto;
 import sgc.mapa.dto.ImpactoMapaDto;
 import sgc.mapa.modelo.Mapa;
 import sgc.mapa.modelo.MapaRepo;
+import sgc.mapa.modelo.TipoImpactoAtividade;
+import sgc.mapa.modelo.TipoImpactoCompetencia;
 import sgc.sgrh.Usuario;
 import sgc.subprocesso.SituacaoSubprocesso;
 import sgc.subprocesso.modelo.Subprocesso;
@@ -29,7 +33,11 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.when;
 
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 class ImpactoMapaServiceTest {
     private static final String COMPETENCIA_AFETADA = "Competência Afetada";
     @Mock
@@ -46,6 +54,12 @@ class ImpactoMapaServiceTest {
 
     @Mock
     private CompetenciaAtividadeRepo repositorioCompetenciaAtividade;
+
+    @Mock
+    private ImpactoAtividadeService impactoAtividadeService;
+
+    @Mock
+    private ImpactoCompetenciaService impactoCompetenciaService;
 
     @InjectMocks
     private ImpactoMapaService impactoMapaServico;
@@ -106,18 +120,20 @@ class ImpactoMapaServiceTest {
         CompetenciaAtividade vinculo = new CompetenciaAtividade();
         vinculo.setId(new CompetenciaAtividade.Id(10L, 20L));
 
+        AtividadeImpactadaDto atividadeRemovidaDto = new AtividadeImpactadaDto(10L, "Atividade Antiga", TipoImpactoAtividade.REMOVIDA, null, List.of());
+        List<AtividadeImpactadaDto> removidas = List.of(atividadeRemovidaDto);
+        CompetenciaImpactadaDto competenciaImpactadaDto = new CompetenciaImpactadaDto(20L, COMPETENCIA_AFETADA, List.of("Detalhe"), TipoImpactoCompetencia.IMPACTO_GENERICO);
+        List<CompetenciaImpactadaDto> competenciasImpactadas = List.of(competenciaImpactadaDto);
+
         when(repositorioSubprocesso.findById(100L)).thenReturn(Optional.of(subprocesso));
         when(repositorioMapa.findMapaVigenteByUnidade(1L)).thenReturn(Optional.of(mapaVigente));
         when(repositorioMapa.findBySubprocessoCodigo(100L)).thenReturn(Optional.of(mapaSubprocesso));
-
-        when(atividadeRepo.findByMapaCodigo(2L)).thenReturn(java.util.Collections.emptyList());
-
-        when(repositorioCompetencia.findByMapaCodigo(1L)).thenReturn(java.util.List.of(competencia));
-        when(repositorioCompetenciaAtividade.findByCompetenciaCodigo(20L)).thenReturn(java.util.List.of(vinculo));
-        when(atividadeRepo.findAllById(java.util.Set.of(10L))).thenReturn(java.util.List.of(atividadeRemovida));
-
-        when(repositorioCompetenciaAtividade.findByAtividadeCodigo(10L)).thenReturn(java.util.List.of(vinculo));
-        when(repositorioCompetencia.findById(20L)).thenReturn(Optional.of(competencia));
+        when(atividadeRepo.findByMapaCodigo(mapaSubprocesso.getCodigo())).thenReturn(List.of());
+        when(impactoAtividadeService.obterAtividadesDoMapa(mapaVigente)).thenReturn(List.of(atividadeRemovida));
+        when(impactoAtividadeService.detectarAtividadesInseridas(List.of(), List.of(atividadeRemovida))).thenReturn(List.of());
+        when(impactoAtividadeService.detectarAtividadesRemovidas(List.of(), List.of(atividadeRemovida), mapaVigente)).thenReturn(removidas);
+        when(impactoAtividadeService.detectarAtividadesAlteradas(List.of(), List.of(atividadeRemovida), mapaVigente)).thenReturn(List.of());
+        when(impactoCompetenciaService.identificarCompetenciasImpactadas(mapaVigente, removidas, List.of())).thenReturn(competenciasImpactadas);
 
 
         ImpactoMapaDto result = impactoMapaServico.verificarImpactos(100L, usuario);
@@ -151,11 +167,10 @@ class ImpactoMapaServiceTest {
         when(repositorioSubprocesso.findById(100L)).thenReturn(Optional.of(subprocesso));
         when(repositorioMapa.findMapaVigenteByUnidade(1L)).thenReturn(Optional.of(mapaVigente));
         when(repositorioMapa.findBySubprocessoCodigo(100L)).thenReturn(Optional.of(mapaSubprocesso));
-
-        when(atividadeRepo.findByMapaCodigo(2L)).thenReturn(java.util.List.of(atividade));
-        when(repositorioCompetencia.findByMapaCodigo(1L)).thenReturn(java.util.List.of(competencia));
-        when(repositorioCompetenciaAtividade.findByCompetenciaCodigo(20L)).thenReturn(java.util.List.of(vinculo));
-        when(atividadeRepo.findAllById(java.util.Set.of(10L))).thenReturn(java.util.List.of(atividade));
+        when(impactoAtividadeService.detectarAtividadesInseridas(List.of(atividade), List.of())).thenReturn(List.of());
+        when(impactoAtividadeService.detectarAtividadesRemovidas(List.of(atividade), List.of(), mapaVigente)).thenReturn(List.of());
+        when(impactoAtividadeService.detectarAtividadesAlteradas(List.of(atividade), List.of(), mapaVigente)).thenReturn(List.of());
+        when(impactoCompetenciaService.identificarCompetenciasImpactadas(mapaVigente, List.of(), List.of())).thenReturn(List.of());
 
 
         ImpactoMapaDto result = impactoMapaServico.verificarImpactos(100L, usuario);
@@ -178,13 +193,18 @@ class ImpactoMapaServiceTest {
         atividadeNova.setDescricao("Atividade Nova");
         atividadeNova.setMapa(mapaSubprocesso);
 
+        AtividadeImpactadaDto atividadeInseridaDto = new AtividadeImpactadaDto(10L, "Atividade Nova", TipoImpactoAtividade.INSERIDA, null, List.of());
+        List<AtividadeImpactadaDto> inseridas = List.of(atividadeInseridaDto);
+
         when(repositorioSubprocesso.findById(100L)).thenReturn(Optional.of(subprocesso));
         when(repositorioMapa.findMapaVigenteByUnidade(1L)).thenReturn(Optional.of(mapaVigente));
         when(repositorioMapa.findBySubprocessoCodigo(100L)).thenReturn(Optional.of(mapaSubprocesso));
-
-        when(atividadeRepo.findByMapaCodigo(2L)).thenReturn(java.util.List.of(atividadeNova));
-
-        when(repositorioCompetencia.findByMapaCodigo(1L)).thenReturn(java.util.Collections.emptyList());
+        when(atividadeRepo.findByMapaCodigo(mapaSubprocesso.getCodigo())).thenReturn(List.of(atividadeNova));
+        when(impactoAtividadeService.obterAtividadesDoMapa(mapaVigente)).thenReturn(List.of());
+        when(impactoAtividadeService.detectarAtividadesInseridas(List.of(atividadeNova), List.of())).thenReturn(inseridas);
+        when(impactoAtividadeService.detectarAtividadesRemovidas(List.of(atividadeNova), List.of(), mapaVigente)).thenReturn(List.of());
+        when(impactoAtividadeService.detectarAtividadesAlteradas(List.of(atividadeNova), List.of(), mapaVigente)).thenReturn(List.of());
+        when(impactoCompetenciaService.identificarCompetenciasImpactadas(mapaVigente, List.of(), List.of())).thenReturn(List.of());
 
         ImpactoMapaDto result = impactoMapaServico.verificarImpactos(100L, usuario);
 
@@ -220,18 +240,23 @@ class ImpactoMapaServiceTest {
         CompetenciaAtividade vinculo = new CompetenciaAtividade();
         vinculo.setId(new CompetenciaAtividade.Id(10L, 20L));
 
+        AtividadeImpactadaDto atividadeAlteradaDto = new AtividadeImpactadaDto(11L, "Descrição Nova", TipoImpactoAtividade.ALTERADA, "Descrição Antiga", List.of());
+        List<AtividadeImpactadaDto> alteradas = List.of(atividadeAlteradaDto);
+        CompetenciaImpactadaDto competenciaImpactadaDto = new CompetenciaImpactadaDto(20L, COMPETENCIA_AFETADA, List.of("Detalhe"), TipoImpactoCompetencia.IMPACTO_GENERICO);
+        List<CompetenciaImpactadaDto> competenciasImpactadas = List.of(competenciaImpactadaDto);
+
         when(repositorioSubprocesso.findById(100L)).thenReturn(Optional.of(subprocesso));
         when(repositorioMapa.findMapaVigenteByUnidade(1L)).thenReturn(Optional.of(mapaVigente));
         when(repositorioMapa.findBySubprocessoCodigo(100L)).thenReturn(Optional.of(mapaSubprocesso));
+        when(atividadeRepo.findByMapaCodigo(mapaSubprocesso.getCodigo())).thenReturn(List.of(atividadeAtual));
+        when(impactoAtividadeService.obterAtividadesDoMapa(mapaVigente)).thenReturn(List.of(atividadeVigente));
+        AtividadeImpactadaDto atividadeRemovidaDto = new AtividadeImpactadaDto(10L, "Descrição Antiga", TipoImpactoAtividade.REMOVIDA, null, List.of());
+        List<AtividadeImpactadaDto> removidas = List.of(atividadeRemovidaDto);
 
-        when(atividadeRepo.findByMapaCodigo(2L)).thenReturn(java.util.List.of(atividadeAtual));
-
-        when(repositorioCompetencia.findByMapaCodigo(1L)).thenReturn(java.util.List.of(competencia));
-        when(repositorioCompetenciaAtividade.findByCompetenciaCodigo(20L)).thenReturn(java.util.List.of(vinculo));
-        when(atividadeRepo.findAllById(java.util.Set.of(10L))).thenReturn(java.util.List.of(atividadeVigente));
-
-        when(repositorioCompetenciaAtividade.findByAtividadeCodigo(10L)).thenReturn(java.util.List.of(vinculo));
-        when(repositorioCompetencia.findById(20L)).thenReturn(Optional.of(competencia));
+        when(impactoAtividadeService.detectarAtividadesInseridas(List.of(atividadeAtual), List.of(atividadeVigente))).thenReturn(alteradas);
+        when(impactoAtividadeService.detectarAtividadesRemovidas(List.of(atividadeAtual), List.of(atividadeVigente), mapaVigente)).thenReturn(removidas);
+        when(impactoAtividadeService.detectarAtividadesAlteradas(List.of(atividadeAtual), List.of(atividadeVigente), mapaVigente)).thenReturn(List.of());
+        when(impactoCompetenciaService.identificarCompetenciasImpactadas(mapaVigente, removidas, List.of())).thenReturn(competenciasImpactadas);
 
         ImpactoMapaDto result = impactoMapaServico.verificarImpactos(100L, usuario);
 
